<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
   <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:title="@string/bottom_navigation_item_title_inicio" />
    <item
        android:id="@+id/mainSearchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/bottom_navigation_item_title_buscar" />
    <item
        android:id="@+id/mainStoreFragment"
        android:icon="@drawable/ic_map"
        android:title="@string/bottom_navigation_item_title_tiendas" />
    <!--<item
        android:id="@+id/action_account"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/bottom_navigation_item_title_mi_cuenta" />-->
    <item
        android:id="@+id/mainCarFragment"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/bottom_navigation_item_title_mi_carrito" />
</menu>