<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_product"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/common_padding_min"
    android:layout_marginTop="@dimen/common_padding_min"
    android:layout_marginEnd="@dimen/common_padding_min"
    android:layout_marginBottom="@dimen/common_padding_min">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_photo_product"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/description_img"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_marginTop="@dimen/common_padding_min"
                    android:layout_marginStart="@dimen/common_padding_min"
                    android:id="@+id/tv_name_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Nombre" />

                <TextView
                    android:id="@+id/tv_price_product"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="@dimen/common_padding_min"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_name_product"
                    tools:text="S/99.99" />

                <TextView
                    android:id="@+id/tv_name_store"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/common_padding_min"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    app:layout_constraintStart_toStartOf="@+id/tv_name_product"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name_product"
                    tools:text="Tienda" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_padding_default"
                    android:layout_marginEnd="@dimen/common_padding_default"
                    android:background="?attr/selectableItemBackground"
                    android:src="@drawable/ic_delete"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/btn_add"
                    android:layout_width="@dimen/common_padding_long"
                    android:layout_height="@dimen/common_padding_long"
                    android:layout_marginEnd="@dimen/common_padding_min"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/description_btn_add"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_add_circle"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_remove"
                    app:layout_constraintEnd_toStartOf="@+id/tv_cantidad"
                    app:tint="@color/primaryLightColor" />

                <TextView
                    android:id="@+id/tv_cantidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/common_padding_min"
                    android:text="@string/_1"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_remove"
                    app:layout_constraintEnd_toStartOf="@+id/btn_remove"
                    app:layout_constraintTop_toTopOf="@+id/btn_remove" />

                <ImageButton
                    android:id="@+id/btn_remove"
                    android:layout_width="@dimen/common_padding_long"
                    android:layout_height="@dimen/common_padding_long"
                    android:layout_marginEnd="@dimen/common_padding_min"
                    android:layout_marginBottom="@dimen/common_padding_min"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/description_btn_remove"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_remove_circle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:tint="@color/primaryLightColor" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
